--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -334,59 +334,75 @@ More specifically, increasing \(\Omega_d\) or \(\Omega_c\) results in enhanced s
 In this section we now proceed to investigate the modulation instability of the CW or QCW probe field. The steady state solution of Eqn. (40) can be written as,
 \begin{equation}
 A(\xi, T) = \sqrt{P_0} e^{i (\gamma P_0 + \delta P_0^2) \xi}
-\tag{41}
 \end{equation}
 To examine whether the continuous wave (CW) probe beam is stable under small perturbation, we introduce a small perturbation in the following form:
 \begin{equation}
 A(\xi, T) = \left\{ \sqrt{P_0} + a(\xi, T) \right\} e^{i (\gamma P_0 + \delta P_0^2) \xi}
-\tag{42}
 \end{equation}
 Here \( \sqrt{P_0} \) and \( a(\xi, T) \) are respectively the amplitudes of the CW probe beam in the steady state and small perturbation. The substitution of Eq. (42) in Eq. (40) and subsequent linearization leads to the following equation for the perturbation \( a(\xi, T) \):
 \begin{equation}
 i \frac{\partial a}{\partial \xi} - \frac{\beta_2(0)}{2!} \frac{\partial^2 a}{\partial T^2} - \frac{i}{3!} \beta_3(0) \frac{\partial^3 a}{\partial T^3} + \frac{1}{4!} \beta_4(0) \frac{\partial^4 a}{\partial T^4} + (\gamma P_0 + 2 \delta P_0^2)(a + a^*) = 0
-\tag{43}
 \end{equation}
 We assume the following solution of the perturbation \( a(\xi, T) \)
 \begin{equation}
 a(\xi, T) = C e^{i(K \xi - \Omega T)} + D e^{-i(K \xi - \Omega T)}
-\tag{44}
 \end{equation}
 where \( C \) and \( D \) are the amplitudes of the small perturbation. \( K \) and \( \Omega \) are wave number and frequency of the perturbation. By virtue of Eqs. (43) and (44), we get the following two homogeneous equations for \( C \) and \( D \):
 \begin{equation}
 C(-K + G) + (\gamma P_0 + 2 \delta P_0^2) D = 0
-\tag{45}
 \end{equation}
 \begin{equation}
 (\gamma P_0 + 2 \delta P_0^2) C + (K + \tilde{G}) D = 0
-\tag{46}
 \end{equation}
 where,
 \[
-G = \left[ \frac{\beta_2(0)}{2!} \Omega^2 + \frac{\beta_3(0)}{3!} \Omega^3 + \frac{\beta_4(0)}{4!} \Omega^4 + (\gamma P_0 + \delta P_0^2) \right]
+G = \frac{\beta_2(0)}{2!} \Omega^2 + \frac{\beta_3(0)}{3!} \Omega^3 + \frac{\beta_4(0)}{4!} \Omega^4 + (\gamma P_0 + \delta P_0^2)
 \]
 \[
-\tilde{G} = \left[ \frac{\beta_2(0)}{2!} \Omega^2 - \frac{\beta_3(0)}{3!} \Omega^3 + \frac{\beta_4(0)}{4!} \Omega^4 + (\gamma P_0 + \delta P_0^2) \right]
+\tilde{G} = \frac{\beta_2(0)}{2!} \Omega^2 - \frac{\beta_3(0)}{3!} \Omega^3 + \frac{\beta_4(0)}{4!} \Omega^4 + (\gamma P_0 + \delta P_0^2)
 \]
 The nontrivial solution of Eqs. (45) and (46) for the wave number leads to the dispersion relation:
 \begin{equation}
 K = \frac{1}{2} \beta_3(0) \Omega^3 \pm i \left\{ \left[ \left( \frac{\beta_2(0)}{2!} \Omega^2 + \beta_4(0) \frac{\Omega^4}{4!} \right) \left( \gamma P_0 + 2 \delta P_0^2 \right) \right] - \left( \frac{\beta_2(0)}{2!} \Omega^2 \right)^2 \right\}^{1/2}
-\tag{47}
 \end{equation}
 The gain of the modulation instability (MI) at frequency \( \Omega \) is given by,
 
 \begin{equation}
 g(\Omega) = 2 \times \text{Im}(K)
-\tag{48}
 \end{equation}
 \begin{equation}
 g = 2 \left[ \left\{ \beta_2(0) \Omega^2 + \beta_4(0) \frac{\Omega^4}{4!} \right\} \left\{ \gamma P_0 + 2 \delta P_0^2 \right\} - \left\{ \beta_2(0) \frac{\Omega^2}{2!} + \beta_4(0) \frac{\Omega^4}{4!} \right\} \right]^{1/2}
-\tag{49}
 \end{equation}
 The instability gain maximizes at $\Omega_m$ is given by,
 \begin{equation}
 \Omega_m = \left[ 6 \left\{ \left( \frac{\beta_2}{\beta_4} \right)^2 + \frac{2}{3} \text{frac} \left( (\gamma + 2\delta P_0) P_0 \beta_4 \right) \right\}^{1/2} - 6 \frac{\beta_2}{\beta_4} \right]^{1/2}
-\tag{50}
 \end{equation}
+At the maximum of \(g(p)\) the modulation instability sets in resulting in the breakup of the CW beam into a periodic pulse train. The critical, i.e., the cut-off angular frequency \(p_c\) above which the CW probe is stable is given by
+\begin{equation}
+p_c = \left[ \frac{|W_r|r - 2|M_r|r^2}{\beta^{\prime\prime}_r(0)} \right]^{1/2}
+\end{equation}
+\vspace{0pt}
+
+\section{Gain Variation w.r.t Frequency}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Plots/G_v_Power.jpeg}
+    \caption{Gain vs Frequency for $4^{th}$ order dispersion}
+    \label{fig:G_v_P}
+\end{figure}
+This plot illustrates the \textit{modulation instability} \cite{lighthall} (MI) gain as a function of frequency detuning in a semiconductor quantum dot medium governed by Kerr nonlinearity, under varying continuous-wave (CW) pump powers. The gain \( G \), expressed in ${mm^{-1}}$, is plotted against the frequency detuning \( \Omega \) (in ${GHz}$) for three distinct pump powers: ${800}{mW}$ (magenta dashed), ${1500}{mW}$ (orange dash-dotted), and ${2500}{mW}$ (cyan solid).
+
+At all power levels, MI sidebands are symmetrically distributed about the central frequency (\( \Omega = 0 \)), indicating a phase-matched four-wave mixing (FWM) process. As the pump power increases, both the gain bandwidth and peak gain rise significantly, attributed to enhanced self-phase modulation (SPM) arising from a higher nonlinear refractive index \( n_2 \). For instance, at ${800}{mW}$, the gain peaks near ${700}{mm^{-1}}$ at \( \Omega \approx \pm {1.2}{GHz} \), whereas at ${2500}{mW}$, the peak exceeds ${1400}{mm^{-1}}$ with sidebands shifting to \( \Omega \approx \pm {1.9}{GHz} \).
+
+The parabolic gain profiles emerge from the interplay between Kerr-induced phase modulation and higher-order dispersion, dominated by the fourth-order dispersion term \( \beta_4 \). The gain drops to zero at \( \Omega = 0 \), consistent with the phase mismatch criterion for MI.
+
+Such gain spectra are pivotal in applications such as ultrafast pulse generation, optical frequency combs, and spontaneous MI-driven supercontinuum generation. The power dependence provides tunability, making quantum-dot-based platforms highly attractive for nonlinear integrated photonics.
+\newpage
+
+\section{Variation of Gain to Power and Frequency}
+
+Here we did the waterfall plot of Kerr using $2^{nd}$ and \(4^{th}\) order dispersion. 
 
 \begin{figure}[h]
   \centering
@@ -401,11 +417,19 @@ The instability gain maximizes at $\Omega_m$ is given by,
     \includegraphics[width=\linewidth]{Plots/Beta4_Kerr.jpeg}
     \subcaption{}
   \end{minipage}
-  \caption{Variation of MI gain with the frequency and power in absence and presence of fourth order dispersion (i.e., \(\beta_4=0\) ). (a) In absence of \(\beta_4\), only Kerr nonlinearity present and both Kerr and quintic nonlinearities are present. (b) In presence of \(\beta_4\), only Kerr nonlinearity present and both Kerr and quintic nonlinearities are present.}
-  \label{fig:omegac}
-\end{figure}
+  \caption{Variation of MI gain with the frequency and power in absence and presence of $4^{th}$ order dispersion (i.e., $\beta_4=0$). (a) In absence of $\beta_4$, only Kerr nonlinearity present. (b) In presence of $\beta_4$, only Kerr nonlinearity present.}
+  \label{fig:waterfall}
+ \end{figure}
+This 3D plot characterizes the Modulation Instability \cite{lighthall} (MI) gain spectrum \( G(\Omega, P_0) \) in semiconductor quantum dots, revealing the conditions under which small perturbations on a continuous wave grow exponentially due to the nonlinear interplay between the Kerr effect and group velocity dispersion (GVD). The vertical axis represents the MI gain in ${mm^{-1}}$, while the horizontal axes denote the angular frequency detuning \( \Omega \) (in ${GHz}$) and the input continuous-wave optical power \( P_0 \) (in ${mW}$).
 
-\section{Gain Variation w.r.t Frequency for Kerr}
+The MI gain is negligible at low power levels, but a distinct threshold appears near \( P_0 \approx 5 \, {mW} \), beyond which the gain rises sharply, indicative of a phase-matched four-wave mixing process driven by cubic (\( \chi^{(3)} \)) nonlinearity. The peak gain approaches approximately \( G \approx 6 \, {mm^{-1}} \) at \( P_0 \approx 35 \, {mW} \), centered around \( \Omega \approx \pm 1.2 \, {GHz} \). The symmetric spectral broadening with respect to zero detuning indicates a balanced sideband amplification mechanism.
+
+For the \(4^{th}\) order dispersion we can see The MI bands span up to $\pm5GHz$, and the gain profile becomes more structured due to the higher-order phase mismatch. These features are crucial for tailoring spectral shaping, generating ultra-broadband combs, and enhancing pulse breakup dynamics in QD-based nonlinear photonic platforms.
+
+Such characteristics make QD systems prime candidates for tunable broadband sources, soliton generation, and high-speed optical signal processing.
+
+\section{Conclusion}
+In summary we have examined dispersive and optical nonlinear properties of SQDs under the regime of electromagnetic induced transparency. The magnitude of this nonlinearity could be controlled by controlling the Rabi frequency and detuning of the con- trolling fields. The intensity and the width of modulation spectra could be controlled by two control fields. A propagating continuous wave or quasi continuous probe beam undergoes modulation instability \cite{lighthall} owing to the presence of large nonlinearity. The growth of instability and bandwidth of unstable frequencies could be externally govern by the Rabi frequency, two control detunings and power of the probe beam. Both fourth order dispersion and quintic nonlinearity reduce the growth and bandwidth of the unstable frequency.
 
 \newpage
 \section*{Acknowledgment}
